--- a/src/blog/about-modern-sass.mdx
+++ b/src/blog/about-modern-sass.mdx
@@ -56,7 +56,7 @@ For generic purposes, for a simple project (where you don’t have many dependen
 
 Although knowing Sass is basic and straightforward, it still has a learning curve depending on your needs. Its language is close to CSS by intention, which is a good design feature.
 
-I think Sass is the best investment if you plan to make a complete system, like a library or framework. If you use a CSS tool that needs it (like Boostrap), you have to go with it. One more reason to learn it.
+I think Sass is the best investment if you plan to make a complete system, like a library or framework. If you use a CSS tool that needs it (like Bootstrap), you have to go with it. One more reason to learn it.
 
 The modern Sass - _for me_ - means that we can use the new CSS features, but we can still get a lot of advantages from the preprocessor as we would get in a simple programming language.
 
