--- a/src/blog/how-to-choose-a-css-framework.mdx
+++ b/src/blog/how-to-choose-a-css-framework.mdx
@@ -13,7 +13,7 @@ Knowing why we use any CSS framework is an interesting topic because we started 
 
 ## Why We Need Frameworks?
 
-First, do we need a framework at all? Frameworks are everywhere in development, no matter the field. Laravel is a back-end, Boostrap is a CSS, and React is a JS framework.
+First, do we need a framework at all? Frameworks are everywhere in development, no matter the field. Laravel is a back-end, Bootstrap is a CSS, and React is a JS framework.
 
 **We use frameworks to save time, make DRY code and write better code.** The catch is that declaring better code is often challenging, but having a system you can use in each project is a win.
 
@@ -40,7 +40,7 @@ It depends on your situation. When I started, I didn’t use one, and then I use
 
 The project determines the system you need. Using a framework is convenient because all of our projects will use similar stuff. But this is a big drawback because it can kill innovation and learning.
 
-Of course, we can update our system (like in the case of Boostrap) but using Bootstrap and understanding it are two different things.
+Of course, we can update our system (like in the case of Bootstrap) but using Bootstrap and understanding it are two different things.
 
 ## The Types of the CSS Frameworks
 
@@ -51,7 +51,7 @@ Another Bootstrap-like solution is [Bulma](https://bulma.io/), which is also a m
 The most significant advantage of the mentioned ones is that they come with many resources, support, and excellent documentation. One significant disadvantage is that learning them and staying updated is more challenging (but a learning curve is always present).
 
 - If you need a smaller system, you can try [Pure.css](https://purecss.io/
-) or [Miligram](https://milligram.io/).
+) or [Milligram](https://milligram.io/).
 - If you need a system without classes, you can try [Picnic CSS](https://picnicss.com/) or [water.css](https://github.com/kognise/water.css).
 - If you need a modern, low-level Sass-based system, give it a try to [Spruce CSS framework](https://sprucecss.com/docs/getting-started/introduction). It is a newer one but works for us.
 
