--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -169,4 +169,4 @@ Also, Spruce manage the colors in a separate Sass map named [$colors](/docs/sass
 
 You can create new button color variants using the `btn-variant` mixin. First, you must declare the new button's colors at the `$color` map under the `btn` object. After this, all you have to do is to call the mixin on the preferred selector.
 
-More information about the `btn-variant()` please visit the [releated mixin page](/docs/sass/mixins#btn-variant).
+More information about the `btn-variant()` please visit the [related mixin page](/docs/sass/mixins#btn-variant).
