--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -63,7 +63,7 @@ You can set two additional sizes with `form-control--sm` and `form-control--lg` 
 
 ## File
 
-Use the `form-file` class on an `input[type="file"]` to nativly stlye the file input.
+Use the `form-file` class on an `input[type="file"]` to nativly style the file input.
 
 - You can size the input with `form-file--sm` and `form-file--lg`.
 - The styling is the same as the `.btn`.
@@ -170,7 +170,7 @@ Use the `form-control` class on any select element to style it. Use the `multipl
   </select>
 </div>
 <div class="form-group">
-  <label class="form-label" for="front-end-frameworks-multiple">Front-end Frameworks (Mulitple)</label>
+  <label class="form-label" for="front-end-frameworks-multiple">Front-end Frameworks (Multiple)</label>
   <select class="form-control" id="front-end-frameworks-multiple" multiple="multiple">
     <option value="react">React</option>
     <option value="vue">Vue</option>
@@ -191,7 +191,7 @@ Use the `form-control` class on any select element to style it. Use the `multipl
   </select>
 </div>
 <div class="form-group">
-  <label class="form-label" for="front-end-frameworks-multiple">Front-end Frameworks (Mulitple)</label>
+  <label class="form-label" for="front-end-frameworks-multiple">Front-end Frameworks (Multiple)</label>
   <select class="form-control" id="front-end-frameworks-multiple" multiple="multiple">
     <option value="react">React</option>
     <option value="vue">Vue</option>
@@ -531,7 +531,7 @@ Using the `disabled` attribute, you can create disabled state on inputs.
 
 ## Form Group
 
-Form-group is the generic container class for form elements. Besides the basic implementations, you can use the followings:
+Form-group is the generic container class for form elements. Besides the basic implementations, you can use the following:
 
 - `form-group--vertical-check`: to stack the radio, checkbox, and switches vertically.
 - `form-group--horizontal-check`: to stack the radio, checkbox, and switches horizontally.
