--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -7,7 +7,7 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/el
 <p className="lead">Typography is an essential part of any system. With Spruce, you get basic styles for the most related HTML elements.</p>
 
 - The type scale is REM (root-relative EM) based. The base size is set to 1rem by default through `$font-size-base`, which will usually be 16px (depending on the browser's defaults). You can also change the ratio with the `$font-size-ratio` variable.
-- You can use four diferent font sizing variables: `$font-size-base` (1rem), `$font-size-sm` (0.9rem), `$font-size-lg` (1.1rem) and `$font-size-lead` (math.pow($font-size-ratio, 1) * $font-size-base).
+- You can use four different font sizing variables: `$font-size-base` (1rem), `$font-size-sm` (0.9rem), `$font-size-lg` (1.1rem) and `$font-size-lead` (math.pow($font-size-ratio, 1) * $font-size-base).
 - You can access the heading font sizes under the `$font-sizes` with the [spruce.font-size()](/docs/sass/functions#font-size) function.
 
 [View More Typography Variables on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_typography.scss)
