--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -116,7 +116,7 @@ It is hard to get generic font sizes that we can use throughout a whole project.
 
 | Name            | Default Value                          | Description                                                                  |
 | --------------- | -------------------------------------- | ---------------------------------------------------------------------------- |
-| `$size`         |                                        | The size of the font with a prefered unit.                                   |
+| `$size`         |                                        | The size of the font with a preferred unit.                                   |
 | `$scaler`       | `15`                                   | How much smaller font size do you want for the smaller screen in percentage. |
 | `$optimal-size` | `2vw + 1rem` from the `$settings` map. | The optimal font-size value if `$fluid` is set to `true`.                    |
 
@@ -268,7 +268,7 @@ Get the transition values by key name. **The function returns a CSS custom prope
 
 | Name       | Description                                                                             |
 |------------|-----------------------------------------------------------------------------------------|
-| `$key`     | The name of the transition attribut. Possible values: `duration` and `timing-function`. |
+| `$key`     | The name of the transition attribute. Possible values: `duration` and `timing-function`. |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_transition.scss)
 
