--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -8,7 +8,7 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sa
 
 With the `breakpoint` mixin, you can create a `min-width` based (mobile-first) breakpoint on a predefined breakpoint from the `$breakpoints` map.
 
-The predefined breakpoints are the followings:
+The predefined breakpoints are the following:
 
 ```scss
 $breakpoints: (
@@ -142,7 +142,7 @@ The `font-face` mixin is a helper to generate a `@font-face` declaration. This i
 |------------------|---------------|--------------------------------------------------------------------------------------------------------------------------------------|
 | `$font-family`   | `null`        | The name of the font family.                                                                                                         |
 | `$src`           | `null`        | The URL path to the font file.                                                                                                       |
-| `$font-weight`   | `400`         | The wieght of the font.                                                                                                              |
+| `$font-weight`   | `400`         | The weight of the font.                                                                                                              |
 | `$font-style`    | `normal`      | The style of the font.                                                                                                               |
 | `$font-display`  | `swap`        | The <code><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display">font-display</a></code> property value. |
 
