--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -29,7 +29,7 @@ To see the complete list of the getter functions, please visit the [functions pa
 
 ## Override Variables
 
-There are two types of variables: single one and map. All of them are overwriteable, expandable with ```@use```'s ```with``` option.
+There are two types of variables: single one and map. All of them are overwritable, expandable with ```@use```'s ```with``` option.
 
 ```scss
 @use '~sprucecss/scss/spruce' with (
