Add print generator

--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -62,6 +62,7 @@ To generate the element related styles (everything under the element folder), us
 - [generate-table](https://github.com/conedevelopment/sprucecss/blob/main/scss/element/_table.scss)
 - [generate-typography](https://github.com/conedevelopment/sprucecss/blob/main/scss/element/_typography.scss)
 - [generate-utilities](https://github.com/conedevelopment/sprucecss/blob/main/scss/element/_utilities.scss)
+- [generate-print](https://github.com/conedevelopment/sprucecss/blob/main/scss/print/_index.scss)
 
 ## generate-form
 
