--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -59,7 +59,7 @@ If you prefer the namespaces, leave the `as *` part out and use the following:
 @use '~sprucecss/scss/spruce';
 
 .section {
-  @include layout-stack('m');
+  @include spruce.layout-stack('m');
 }
 ```
 
