--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -29,9 +29,9 @@ yarn add sprucecss
 
 ## Using Spruce CSS with Sass
 
-The manageability of Spruce CSS comes from its Sass features, mixins, and functions. You should use the preprocessor for the proper workflow (e.g., overwriting the default [variables](/docs/sass/variables)).
+The manageability of Spruce CSS comes from its Sass features, variables, mixins, and functions. You should use the preprocessor for the proper workflow (e.g., overwriting the default [variables](/docs/sass/variables)).
 
-With the help of the [mixins](/docs/sass/mixins) and [functions](/docs/sass/functions), you can write code and access values easier.
+With the help of the [mixins](/docs/sass/mixins) and [functions](/docs/sass/functions), you can write code easier.
 
 ### Import It With @use
 
