--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -8,13 +8,13 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/ge
 
 ## Is Sass Needed to Use Spruce?
 
-Yes, it is. Spruce uses few utility classes. It uses [mixins](/docs/sass/mixins), [functions](/docs/sass/functions), and [variables](/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.To get the most out of it, you should use with Sass.
+Yes, it is. Spruce uses a few utility classes. It uses [mixins](/docs/sass/mixins), [functions](/docs/sass/functions), and [variables](/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience. To get the most out of it, you should use Sass.
 
 You can also [use it as plain CSS](/docs/getting-started/installation#install-manually), but it is a simpler version, and we only recommend it for prototyping.
 
 ## Why Use Sass?
 
-Well, for this question, there is a lot of reasonable answers. In this case, we like the idea of generating only as much code as we need. With this, [Sass](https://sass-lang.com/) is a great help:
+Well, for this question, there are a lot of reasonable answers. In this case, we like the idea of generating only as much code as we need. With this, [Sass](https://sass-lang.com/) is a great help:
 - using mixins and functions, we can create valuable helpers to access various functions or generated variables.
 - It is a framework (of some sort); it must be expandable and adjustable. With Sass `@use`, we can easily configure the default variables and settings.
 - Sass is more than just nesting (an excellent feature too). We can programmatically write and generate our CSS code.
@@ -22,7 +22,7 @@ Well, for this question, there is a lot of reasonable answers. In this case, we 
 
 ## Dart Sass, @use and @forward
 
-The Spruce CSS framework uses the newest Dart Sass. Sass is a tool with great support and development, so following the latest recommendations is always a good idea.
+Spruce CSS framework uses the newest Dart Sass. Sass is a tool with great support and development, so following the latest recommendations is always a good idea.
 
 For example, the @import statement is now deprecated, and the [@use](https://sass-lang.com/documentation/at-rules/use), [@forward](https://sass-lang.com/documentation/at-rules/forward), takes its place.
 
