Update accessibility post

--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -4,7 +4,7 @@ order: 5
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/accessibility.mdx'
 ---
 
-<p className="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop more accessible web-based projects through our code and documentation, where we will try to show you small, related tips and guidance where necessary.</p>
+<p className="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. We aim to help you develop more accessible web-based projects through our code and documentation, where we will try to show you small, related tips and guidance where necessary.</p>
 
 Building something more inclusive is a long process. We learn on the way, too, so this always will be a work in progress.
 
@@ -18,6 +18,6 @@ Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://
 
 We will meet the following accessibility-related issues:
 
-- The base colors and the base combinations will complete the color contrast guides.
+- The base colors and combinations will complete the color contrast guides.
 - We respect the user settings through `prefers-reduced-motion` and `prefers-color-scheme`.
-- We care about semantics and will try to present the code examples more meaningfully.
+- We care about semantics and will present the code examples more meaningfully.
