Update Internationalization post

--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -4,11 +4,11 @@ order: 6
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/internationalization.mdx'
 ---
 
-<p className="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
+<p className="lead">Internationalization (i18n) means preparing the code and design to handle different languages and writing modes.</p>
 
-Thanks for the logical properties and values; we can do more with i18n just with CSS.
+Thanks for the logical properties and values; we can do more with i18n, just with CSS.
 
-The simplest example is the right-to-left (RTL) writing mode used by Arabic and Hebrew languages, among others. When you write RTL, you should mirror (simplified) your site: your logo in the header moves to the right side, and all of your layout and text alignment also similarly change place.
+The simplest example is the right-to-left (RTL) writing mode used by Arabic and Hebrew languages, among others. When you write RTL, you should mirror your site: your logo in the header moves to the right side, and your layout and text alignment similarly change place.
 
 For more information, check out this excellent introductory video from [Moriel Schottlender](https://twitter.com/mooeypoo) hosted by [Jason Lengstorf](https://www.jason.af/):
 
@@ -16,11 +16,11 @@ For more information, check out this excellent introductory video from [Moriel S
 
 ## Logical Properties and Values
 
-CSS Logical Properties and Values is a newer CSS module to control the layout logically. Instead of physical left or right (also top and bottom) values, we have logical left or right, depending on the writing mode.
+CSS Logical Properties and Values is a newer CSS module to control the layout logically. Instead of physical left or right (top and bottom) values, we have logical left or right, depending on the writing mode.
 
-Spruce uses these logical properties and values, but this is a new feature for us too.
+Spruce uses these logical properties and values, but this is also a new feature for us.
 
-It has relatively [good support](https://caniuse.com/css-logical-props), but we still have to test our code well.
+It has relatively [good support](https://caniuse.com/css-logical-props), but we must still test our code well.
 
 **For more information, please visit the following pages:**
 
